--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,11 +20,20 @@ jobs:
       - name: Checkout
         uses: actions/checkout@3df4ab11eba7bda6032a0b82a6bb43b11571feac
 
+      - name: Cache
+        id: cache
+        uses: actions/cache@704facf57e6136b1bc63b828d79edcd491f0ee84
+        with:
+          path: _site
+          key: feed-ci-jekyll-${{ hashFiles('_offerings/**/*.md') }}-${{ hashFiles('feed.json') }}
+
       - name: Configure Pages
         uses: actions/configure-pages@f156874f8191504dae5b037505266ed5dda6c382
+        if: steps.cache.outputs.cache-hit != 'true'
 
       - name: Build Pages
         uses: actions/jekyll-build-pages@v1
+        if: steps.cache.outputs.cache-hit != 'true'
 
       - name: Setup Ruby
         uses: ruby/setup-ruby@5311f05890856149502132d25c4a24985a00d426
